--- a/now.json
+++ b/now.json
@@ -2,9 +2,12 @@
   "version": 2,
   "scope": "changesets",
   "env": {
-    "APP_ID": "@app-id",
-    "WEBHOOK_SECRET": "@webhook-secret",
-    "PRIVATE_KEY": "@private-key-base64-encoded"
+    "PROD_APP_ID": "@prod-app-id",
+    "PROD_WEBHOOK_SECRET": "@prod-webhook-secret",
+    "PROD_PRIVATE_KEY": "@prod-private-key-base64-encoded",
+    "DEV_APP_ID": "@dev-app-id",
+    "DEV_WEBHOOK_SECRET": "@dev-webhook-secret",
+    "DEV_PRIVATE_KEY": "@dev-private-key-base64-encoded"
   },
   "builds": [{ "src": "now.js", "use": "@now/node" }],
   "routes": [{ "src": "/", "dest": "/now.js" }]
