--- a/now.json
+++ b/now.json
@@ -2,12 +2,9 @@
   "version": 2,
   "scope": "changesets",
   "env": {
-    "PROD_APP_ID": "@prod-app-id",
-    "PROD_WEBHOOK_SECRET": "@prod-webhook-secret",
-    "PROD_PRIVATE_KEY": "@prod-private-key-base64-encoded",
-    "DEV_APP_ID": "@dev-app-id",
-    "DEV_WEBHOOK_SECRET": "@dev-webhook-secret",
-    "DEV_PRIVATE_KEY": "@dev-private-key-base64-encoded"
+    "APP_ID": "@dev-app-id",
+    "WEBHOOK_SECRET": "@dev-webhook-secret",
+    "PRIVATE_KEY": "@dev-private-key-base64-encoded"
   },
   "builds": [{ "src": "now.js", "use": "@now/node" }],
   "routes": [{ "src": "/", "dest": "/now.js" }]
