--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
   "repository": "https://github.com/changesets/bot",
   "homepage": "https://github.com/apps/changeset-bot",
   "dependencies": {
-    "@changesets/assemble-release-plan": "^0.3.1",
-    "@changesets/config": "^0.3.0",
-    "@changesets/parse": "^0.3.1",
-    "@changesets/types": "^0.4.0",
+    "@changesets/assemble-release-plan": "^1.0.0",
+    "@changesets/config": "^1.0.0",
+    "@changesets/parse": "^0.3.2",
+    "@changesets/types": "^1.0.0",
+    "@manypkg/get-packages": "^1.0.0",
     "@types/bunyan": "^1.8.6",
     "@types/express": "^4.17.2",
     "@types/ioredis": "^4.14.8",
     "@types/js-yaml": "^3.12.2",
     "@types/micromatch": "^4.0.1",
     "@types/node-fetch": "^2.5.5",
-    "get-dependents-graph": "^0.2.0",
     "human-id": "^1.0.2",
     "js-yaml": "^3.13.1",
     "node-fetch": "^2.6.0",
