--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@types/express": "^4.17.2",
     "@types/ioredis": "^4.14.8",
     "@types/js-yaml": "^3.12.2",
+    "@types/markdown-table": "^2.0.0",
     "@types/micromatch": "^4.0.1",
     "@types/node-fetch": "^2.5.5",
     "human-id": "^1.0.2",
     "js-yaml": "^3.13.1",
+    "markdown-table": "^2.0.0",
     "node-fetch": "^2.6.0",
     "path": "^0.12.7",
     "probot": "^9.5.0",
