--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/micromatch": "^4.0.1",
     "@types/node-fetch": "^2.5.5",
     "human-id": "^1.0.2",
+    "issue-parser": "^6.0.0",
     "js-yaml": "^3.14.0",
     "markdown-table": "^2.0.0",
     "node-fetch": "^2.6.1",
@@ -27,6 +28,7 @@
     "typescript": "^4.0.3"
   },
   "devDependencies": {
+    "@types/issue-parser": "^3.0.0",
     "jest": "^24.1.0",
     "nock": "^10.0.0",
     "outdent": "^0.7.0"
