--- a/package.json
+++ b/package.json
@@ -18,12 +18,17 @@
     "@types/markdown-table": "^2.0.0",
     "@types/micromatch": "^4.0.1",
     "@types/node-fetch": "^2.5.5",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "human-id": "^1.0.2",
     "js-yaml": "^3.14.0",
     "markdown-table": "^2.0.0",
+    "next": "^12.1.6",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
     "probot": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
