--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "repository": "https://github.com/changesets/bot",
   "homepage": "https://github.com/apps/changeset-bot",
   "dependencies": {
-    "@changesets/assemble-release-plan": "^4.0.0",
-    "@changesets/config": "^1.4.0",
-    "@changesets/parse": "^0.3.7",
-    "@changesets/types": "^3.2.0",
-    "@manypkg/get-packages": "^1.1.1",
+    "@changesets/assemble-release-plan": "^5.1.3",
+    "@changesets/config": "^2.0.0",
+    "@changesets/parse": "^0.3.13",
+    "@changesets/types": "^5.0.0",
+    "@manypkg/get-packages": "^1.1.3",
     "@types/bunyan": "^1.8.6",
     "@types/express": "^4.17.2",
     "@types/ioredis": "^4.14.8",
@@ -18,13 +18,18 @@
     "@types/markdown-table": "^2.0.0",
     "@types/micromatch": "^4.0.1",
     "@types/node-fetch": "^2.5.5",
+    "@types/react": "^18.0.14",
+    "@types/react-dom": "^18.0.5",
     "human-id": "^1.0.2",
     "js-yaml": "^3.14.0",
     "markdown-table": "^2.0.0",
+    "next": "^12.1.6",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
-    "probot": "^10.9.3",
-    "typescript": "^4.0.3"
+    "probot": "^12.2.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "jest": "^24.1.0",
