--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "repository": "https://github.com/changesets/bot",
   "homepage": "https://github.com/apps/changeset-bot",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "@changesets/assemble-release-plan": "^5.1.3",
     "@changesets/config": "^2.0.0",
@@ -32,11 +35,14 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
-    "jest": "^24.1.0",
+    "@types/jest": "^29.5.2",
+    "jest": "^29.1.0",
     "nock": "^10.0.0",
-    "outdent": "^0.7.0"
+    "outdent": "^0.7.0",
+    "ts-jest": "^29.1.0"
   },
   "jest": {
+    "preset": "ts-jest",
     "testEnvironment": "node"
   }
 }
